Fix large button text valignment

--- a/core/static/css/stade/base.css
+++ b/core/static/css/stade/base.css
@@ -149,6 +149,10 @@ h6 {
   padding-bottom: 9px;
 }
 
+.button.is-large {
+  padding-bottom: 10px;
+}
+
 /* Site structure
 ** ================================ */
 
